objects/Request_Type__c.object
<CustomObject>
    <description>This object is used to populate Case Network Information Types and the number requested.</description>
    <fields>
        <fullName>Case__c</fullName>
        <description>Network information case.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Request Types</relationshipLabel>
        <relationshipName>Request_Types</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Proposal_NI_Type__c</fullName>
        <description>The Case Proposal/ NI type.</description>
        <label>Proposal/NI Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ClaimsQuest (Milliman) Repricing</fullName>
                </value>
                <value>
                    <fullName>Discounts (ClaimsQuest)</fullName>
                </value>
                <value>
                    <fullName>Discounts (Local)</fullName>
                </value>
                <value>
                    <fullName>Disruption</fullName>
                </value>
                <value>
                    <fullName>GeoAccess</fullName>
                    <label>Geo</label>
                </value>
                <value>
                    <fullName>Maps</fullName>
                </value>
                <value>
                    <fullName>MarketQuest Network Compare Analysis</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>NDAT</fullName>
                </value>
                <value>
                    <fullName>Page Calculations</fullName>
                </value>
                <value>
                    <fullName>Provider Counts</fullName>
                </value>
                <value>
                    <fullName>Radius Page</fullName>
                </value>
                <value>
                    <fullName>Service Area</fullName>
                </value>
                <value>
                    <fullName>Site Match</fullName>
                </value>
                <value>
                    <fullName>Strennus Network Comparison</fullName>
                </value>
                <value>
                    <fullName>Summary Chart</fullName>
                </value>
                <value>
                    <fullName>Toggle</fullName>
                </value>
                <value>
                    <fullName>Total Discount Measurement Analysis</fullName>
                </value>
                <value>
                    <fullName>TX Repricing</fullName>
                </value>
                <value>
                    <fullName>ValueQuest Analysis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>number_of_requests__c</fullName>
        <description>The number of requests for the type.</description>
        <label># of requests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Request Type</label>
    <nameField>
        <label>Request Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>